--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-infinite-scroll-component": "^6.1.0",
     "zod": "^3.25.42"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^22.15.29",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
