--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
     "json-server": "^0.17.4",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
